fixed-flex-layoutのCSSクラスを追加。see catalog!

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/frame/_contents.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/frame/_contents.scss
@@ -1,7 +1,21 @@
 #contents-area {
 	padding: 10px;
-	overflow-y:auto;
+	overflow-y: auto;
+	
+	&.fixed-flex-layout {
+		display: flex;
+		
+		> .fixed-flex-layout-left {
+			margin-right: 30px;
+			
+			/* specify width each screens */
+		}
+		
+		> .fixed-flex-layout-right {
+			flex: 1;
+		}
+	}
 }
-#master-wrapper{
-	height:100vh;
+#master-wrapper {
+	height: 100vh;
 }
