--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
@@ -43,8 +43,8 @@
 				<!-- A1_4 -->
 				<button id="masterLog" tabindex="4" class="group-button-1">#{i18n.getText('CMM001_4')}</button>
 			</div>
-			<div id="contents-area">
-				<div class="nts-left-content">
+			<div id="contents-area" class="fixed-flex-layout">
+				<div class="fixed-flex-layout-left">
 					<div id="ntsleft" class="bg-green caret-right caret-background">
 						<!-- A2_2 -->
 						<div id="displayAttribute" tabindex="5"
@@ -83,7 +83,7 @@
 				</div>
 
 				<!-- ======================= Chi tiet man hinh ben phai của màn hình A ========================== -->
-				<div class="nts-right-content" data-bind="with: currentCompany">
+				<div class="fixed-flex-layout-right" data-bind="with: currentCompany">
 					<div class="line-height flex">
 						<div style="width: 176px;">
 							<!-- A3_1 -->
