--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
@@ -106,6 +106,7 @@
 	</ul>
 	<h1>Common CSS</h1>
 	<ul>
+		<li><a href="/nts.uk.com.web/view/sample/commoncss/layouting/fixed-flex-layout.xhtml"><span class="label label-new"/>Fixed Flex Layout</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/commoncss/helper-classes.xhtml">Helper classes</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/commoncss/clearfix.xhtml">Clearfix</a></li>
 		<li><a href="/nts.uk.com.web/view/sample/commoncss/color/color.xhtml">Color</a></li>
