--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -4652,24 +4652,25 @@ div .ex-area-line.x-stay {
 
 /* line 1, ../sass/frame/_contents.scss */
 #contents-area {
+  position: relative;
   padding: 10px;
   overflow-y: auto;
 }
-/* line 5, ../sass/frame/_contents.scss */
+/* line 6, ../sass/frame/_contents.scss */
 #contents-area.fixed-flex-layout {
   display: flex;
 }
-/* line 8, ../sass/frame/_contents.scss */
+/* line 9, ../sass/frame/_contents.scss */
 #contents-area.fixed-flex-layout > .fixed-flex-layout-left {
   margin-right: 30px;
   /* specify width each screens */
 }
-/* line 14, ../sass/frame/_contents.scss */
+/* line 15, ../sass/frame/_contents.scss */
 #contents-area.fixed-flex-layout > .fixed-flex-layout-right {
   flex: 1;
 }
 
-/* line 19, ../sass/frame/_contents.scss */
+/* line 20, ../sass/frame/_contents.scss */
 #master-wrapper {
   height: 100vh;
 }
