--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/cps003.c.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/cps003.c.style.css
@@ -46,7 +46,6 @@ i.icon.icon-searchbox {
 	margin-top: 10px;
 }
 
-
 #contents-area .form-group {
 	margin-bottom: 20px;
 }
@@ -64,26 +63,6 @@ i.icon.icon-searchbox {
 	width: 150px;
 }
 
-/* #contents-area { */
-/* 	height: auto !important; */
-/* } */
-
-/* #contents-area .swap-list-updown-contaier>div { */
-/* 	display: inline-block; */
-/* } */
-
-/* .form-group { */
-/* 	margin-bottom: 15px; */
-/* } */
-
-/* .form-group.two-cols>div:nth-child(2) { */
-/* 	margin-left: 140px; */
-/* } */
-
-/* .nts-searchbbox-wrapper { */
-/* 	margin-bottom: 0; */
-/* } */
-
-/* #swap-list-search-area-input { */
-/* 	width: 150px !important; */
-/* } */
+.nts-searchbbox-wrapper input.ntsSearchBox {
+	width:168px;
+}
