--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_functionpanel.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_functionpanel.scss
@@ -1,5 +1,6 @@
 .ntsFunctionPanel {
 	color: blue;
+	position: relative;
 	.function-header {
 		background-color: GreenYellow;
 		border-radius: 5px;   
@@ -10,6 +11,7 @@
 	.function-items {
 		background-color: MistyRose;
 		border-radius: 5px;
+		position: absolute;
 		
 		.function-item-container {
 			line-height: 30px;
