--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -3879,6 +3879,7 @@ button.nts-switch-button[disabled]:hover {
 /* line 1, ../sass/components/_functionpanel.scss */
 .ntsFunctionPanel {
   color: blue;
+  position: relative;
 }
 /* line 3, ../sass/components/_functionpanel.scss */
 .ntsFunctionPanel .function-header {
@@ -3891,6 +3892,7 @@ button.nts-switch-button[disabled]:hover {
 .ntsFunctionPanel .function-items {
   background-color: MistyRose;
   border-radius: 5px;
+  position: absolute;
 }
 /* line 14, ../sass/components/_functionpanel.scss */
 .ntsFunctionPanel .function-items .function-item-container {
