refactor copy items

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/f/index.xhtml
@@ -70,7 +70,7 @@
 									columns: columnPerInfoItemDef,
 									primaryKey: 'id',
 									multiple: true,
-									value: currentPerInfoItem
+									value: checkedIds
 								}">
 								</table>
 							</div>
