--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/f/index.xhtml
@@ -53,7 +53,7 @@
 											primaryKey: 'id',
 											columns: columns,
 											multiple: false,
-											value: currentPerInfoCtg
+											value: selectedCtgId
 										}">
 										</table>
 									</div>
