[UI] fix tho thut tab 3 + 6

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
@@ -27,7 +27,7 @@
 							data-bind="ntsHelpButton: {image: 'img/IMG_KMK003_1.png', position: 'right top' }">?</button>
 					</div>
 				</com:ko>
-				<div class="tab-seperator">	
+				<div class="tab-seperator" style="overflow-x: overlay;">	
 					<com:ko tag="if" bind="isDetailMode">						
 						<div tabindex="-1" class="accordion"
 							data-bind="ntsAccordion: {enable: true} ">
@@ -86,7 +86,7 @@
 							data-bind="ntsHelpButton: {image: 'img/IMG_KMK003_1.png', position: 'right top' }">?</button>
 					</div>
 				</com:ko>
-				<div class="tab-seperator">	
+				<div class="tab-seperator" style="overflow-x: overlay;">	
 					<com:ko tag="if" bind="isDetailMode">						
 						<div tabindex="-1" class="accordion"
 							data-bind="ntsAccordion: {enable: true} ">
@@ -133,7 +133,7 @@
 		</com:ko>
 		
 		<com:ko tag="if" bind="isFlowMode">
-			<div class="tab-seperator">	
+			<div class="tab-seperator" style="overflow-x: overlay;">	
 				<div tabindex="59" id="tab3_fixtable_flow" data-bind="ntsFixTableCustom: {option: fixTableOptionOvertimeFlow}"></div>
 			</div>
 		</com:ko>
@@ -141,7 +141,7 @@
 	</com:ko>
 	
 	<com:ko tag="if" bind="isFlexMode">
-		<div class="tab-seperator">	
+		<div class="tab-seperator" style="overflow-x: overlay;">	
 			<div tabindex="-1" class="accordion" 
 				data-bind="ntsAccordion: {enable: true} ">
 				<h3>
