--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/sample/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/sample/index.xhtml
@@ -22,7 +22,7 @@
 			
 				<div id="side-menu" class="cf"></div>
 				
-				<div style="margin-left: 30px" id="content" class="cf">
+				<div id="content" class="cf">
 					<h1>Table1</h1>
 					<div data-bind="ntsCheckBox:{checked: isEnableAllControl}">Disable/Enable All</div>
 					<button style="margin-bottom: 10px;" data-bind="click: testDataSource">Test datasource</button>
