--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
@@ -7,7 +7,7 @@
 		nts.uk.shr.com.time.TimeWithDayAttr
    	</com:ValidatorScript>
    	
-   	<div class="tab-seperator">	
+   	<div class="tab-seperator" style="overflow-x: overlay;">	
 		<com:ko tag="ifnot" bind="isFlowMode">
 			<com:ko tag="if" bind="isFlexMode">
 				<div tabindex="89" id="tab6_fixtable_flex" data-bind="ntsFixTableCustom: {option: fixTableOptionFlex}"></div>
