[Revert] scroll tab 3 + 6

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -336,7 +336,7 @@
 													mainModel: mainSettingModel }">
 												</div>
 											</div>
-											<div tabindex="53" class="tab-a3" style="width: 774px;">
+											<div tabindex="53" class="tab-a3">
 												<div class="tab-outline" data-bind="ntsKMK003A3: {enum: settingEnum, isDetailMode: isDetailMode,
 													useHalfDay: useHalfDay, mainModel: mainSettingModel, isLoading: isLoading}">
 												</div>
@@ -355,7 +355,7 @@
 													mainSettingModel: mainSettingModel }">
 												</div>
 											</div>
-											<div tabindex="88" class="tab-a6" style="width: 774px;">
+											<div tabindex="88" class="tab-a6">
 												<div class="tab-outline" data-bind="ntsKMK003A6: {enum: settingEnum, 
 													mainModel: mainSettingModel, isLoading: isLoading}">
 												</div>
