--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/003/a/index.xhtml
@@ -58,10 +58,10 @@
 								<td style="vertical-align: top; border-left: solid grey 1px;" colspan="2">
 									<div id="search-div" class="control-group valign-center">
 										<input id="inputStartTime" tabindex="5"
-										data-bind="ntsTimeWithDayEditor: {name: '#[KDL003_12]', constraint:'TimeWithDayAttr', value: startTime, enable: true, readonly: false, required: false, option: { width: '100px' }}" />
+										data-bind="ntsTimeWithDayEditor: {name: '#[KDL003_12]', constraint:'TimeWithDayAttr', value: startTime, enable: true, readonly: false, required: false, option: { width: '100px', timeWithDay: true}}" />
 										<span>#{i18n.getText('KDL003_13')}</span>
 										<input id="inputEndTime" tabindex="7"
-										data-bind="ntsTimeWithDayEditor: {name: '#[KDL003_15]', constraint:'TimeWithDayAttr', value: endTime, enable: true, readonly: false, required: false, option: { width: '100px' }}" />
+										data-bind="ntsTimeWithDayEditor: {name: '#[KDL003_15]', constraint:'TimeWithDayAttr', value: endTime, enable: true, readonly: false, required: false, option: { width: '100px', timeWithDay: true}}" />
 										<button tabindex="8" class="caret-bottom" data-bind="click: search">#{i18n.getText('KDL003_16')}</button>
 										<button tabindex="9" class="pull-right" data-bind="click: clearSearchCondition">#{i18n.getText('KDL003_17')}</button>
 									</div>
