--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
@@ -8,6 +8,7 @@
 		nts.uk.ctx.at.shared.dom.ot.frame.OvertimeWorkFrameNo
    	</com:ValidatorScript>
    	
+   	<div>
 	<com:ko tag="ifnot" bind="isFlexMode">
 	
 		<com:ko tag="ifnot" bind="isFlowMode">
@@ -173,5 +174,5 @@
 			</com:ko>
 		</div>
 	</com:ko>
-	
+	</div>
 </ui:composition>
