--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/kmk003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/kmk003.a.style.css
@@ -27,7 +27,7 @@
 }
 
 .label_header {
-	margin-left: 10px;
+	margin-left: 15px;
 }
 
 .label_memo {
@@ -41,7 +41,7 @@
 
 .setting_header_br {
 	margin-left: 10px;
-	margin-top: 15px;
+	margin-top: 20px;
 	display: inline-flex;
 }
 .icon-x {
@@ -84,4 +84,12 @@
 .tab-inline-item {
 	padding: 0px 10px 0px 10px;
 	display: inline-block;
+}
+
+.main-input {
+	margin: 3px;
+}
+
+#tab-3 {
+	overflow-x: visible;
 }
