--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/a/index.xhtml
@@ -48,8 +48,8 @@
 								<div class="infoButtonSetting" tabindex="-1" >
 									<button class="buttonWorkSetting" tabindex="4" data-bind="click: openDialogKDL003">#{i18n.getText('KSU007_7')}</button>
 									<div class="infoKDL003" tabindex="-1" >
-										<div class="lableInfo" tabindex="-1" data-bind="text: workTypeInfo"><label></label></div>
-										<div class="lableInfo" tabindex="-1" data-bind="text: workTimeInfo"><label></label></div>
+										<div id="workTypeInfo" class="lableInfo" tabindex="-1" data-bind="text: workTypeInfo"><label></label></div>
+										<div id="workTimeInfo" class="lableInfo" tabindex="-1" data-bind="text: workTimeInfo"><label></label></div>
 									</div>
 								</div>
 							</div>
