--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/g/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/g/index.xhtml
@@ -47,12 +47,12 @@
 								</tr>
 								<tr>
 									<td style="padding: 10px 115px 0 20px;">
-										<div data-bind="ntsCheckBox: { checked: checked1 }">#{i18n.getText('KSM001_86')}</div>
-										<div data-bind="ntsCheckBox: { checked: checked2 }">#{i18n.getText('KSM001_87')}</div>
-										<div data-bind="ntsCheckBox: { checked: checked3 }">#{i18n.getText('KSM001_88')}</div>
+										<div data-bind="ntsCheckBox: { checked: yearHdAtr }">#{i18n.getText('KSM001_86')}</div>
+										<div data-bind="ntsCheckBox: { checked: havyHdAtr }">#{i18n.getText('KSM001_87')}</div>
+										<div data-bind="ntsCheckBox: { checked: sphdAtr }">#{i18n.getText('KSM001_88')}</div>
 									</td>
 									<td style="padding-left: 20px;">
-										<div data-bind="ntsCheckBox: { checked: checked1 }">#{i18n.getText('KSM001_89')}</div>
+										<div data-bind="ntsCheckBox: { checked: halfDayAtr }">#{i18n.getText('KSM001_89')}</div>
 									</td>
 								</tr>
 							</tbody>
@@ -97,17 +97,17 @@
 						columns: columns,
 						value: currentCodeListSwap,
 						searchMode: 'filter',
-						searchCriterion: ['code'],
-						draggable: true,
-						multipleDrag: { left: true, right: false },
-						innerDrag: { left: false, right: true },
-						outerDrag: { left: true, right: true } 
+						searchCriterion: ['name'],
+						draggable: false,
+						multipleDrag: { left: false, right: false },
+						innerDrag: { left: false, right: false },
+						outerDrag: { left: false, right: false } 
 					}"></div>
 				</div>
 			</div>
 			<div id="functions-area-bottom">
 				<button tabindex="1" class="proceed x-large" data-bind="click: save">#{i18n.getText('KSM001_73')}</button>
-				<button tabindex="12" class="large" data-bind="click: cancelSetting">#{i18n.getText('KSM001_74')}</button>
+				<button tabindex="12" class="large" data-bind="click: closeDialog">#{i18n.getText('KSM001_74')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
