kal003a: update UI

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/kal003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/kal003.a.style.css
@@ -14,8 +14,11 @@
 }
 
 div[class^="tab-content"] {
-	/*width: 600px;
-	height: 300px;*/
+	padding: 20px;
+}
+
+div[class="tab-content-1"] {
+	padding: 0px !important;
 }
 
 .tab-content-1 button {
@@ -24,7 +27,7 @@ div[class^="tab-content"] {
 }
 
 .tab-content-1 .control-group {
-	margin-top: 25px;
+	margin: 30px;
 }
 
 .flabel {
