--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/index.xhtml
@@ -102,28 +102,28 @@
 				<div class="show-text-user-id">
 					<div>
 						<!-- A8_1 -->	
-						<span>#{i18n.getText('CMM021_18')}</span>
+						<span class="right-content-space-personName1">#{i18n.getText('CMM021_18')}</span>
 						<!-- A8_2 -->
-						<span class="right-content-space">#{i18n.getText('CMM021_19')}</span>
+						<span class="right-content-space-personName2">#{i18n.getText('CMM021_19')}</span>
 						<!-- A8_3 -->
-						<span data-bind="text: personName"></span>
+						<span class="right-content-space-personName3" data-bind="text: personName"></span>
 					</div>
 
 					<div>
 						<!-- A9_1 -->
-						<span>#{i18n.getText('CMM021_13')}</span> 
+						<span class="right-content-space-employee-code1">#{i18n.getText('CMM021_13')}</span> 
 						<!-- A9_2 -->
-						<span class="right-content-space-employee-code">#{i18n.getText('CMM021_19')}</span>
+						<span class="right-content-space-employee-code2">#{i18n.getText('CMM021_19')}</span>
 						<!-- A9_3 -->
-						<span data-bind="text: employeeCode"></span>
+						<span class="right-content-space-employee-code3" data-bind="text: employeeCode"></span>
 					</div>
 					<div>
 						<!-- A10_1 -->
-						<span>#{i18n.getText('CMM021_14')}</span> 
+						<span class="right-content-space-login1">#{i18n.getText('CMM021_14')}</span> 
 						<!-- A10_2 -->
-						<span class="right-content-space-login">#{i18n.getText('CMM021_19')}</span>
+						<span class="right-content-space-login2">#{i18n.getText('CMM021_19')}</span>
 						<!-- A10_3 -->
-						<span data-bind="text: loginId"></span>
+						<span class="right-content-space-login3" data-bind="text: loginId"></span>
 					</div>
 				</div>
 				<div class="show-tab-panel">				
