fix self test kmf002

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/f/index.xhtml
@@ -32,7 +32,7 @@
 							<span>#{i18n.getText('Com_Company')}</span>
 						</div>
 						<!-- F2_2 -->
-						<div data-bind="ntsCheckBox: { checked: selectUnitCheck, 
+						<div id="selectUnitCheck" data-bind="ntsCheckBox: { checked: selectUnitCheck, 
 														enable: true, 
 														text: '#{i18n.getText('KMF002_31')}'}"></div>
 						
