--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -24,7 +24,7 @@
 				<!-- A3_2 -->
 				<div tabindex="3" name="#[KMF002_3]">
 					<!-- A3_3, A3_4 -->
-					<div tabindex="-1" data-bind="ntsRadioBoxGroup: { options: companyManageClassification,
+					<div tabindex="-1" id="managePubHD" data-bind="ntsRadioBoxGroup: { options: companyManageClassification,
 														optionsText: 'name',
 														optionsValue: 'id',
 														value: publicHolidaySetting().isManageComPublicHd,
