--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
@@ -10,7 +10,7 @@
 		<div>
 			<!-- YearMonth Picker -->
 			<!-- E7_1 -->
-			<div tabindex="1" class="ntsControl nts-datepicker-wrapper" data-bind="ntsDatePicker: { value: fiscalYear, 
+			<div tabindex="1" id="datePickerYear" class="ntsControl nts-datepicker-wrapper" data-bind="ntsDatePicker: { value: fiscalYear, 
 																						dateFormat: 'YYYY', 
 																						valueFormat: 'YYYY', 
 																						fiscalYear: true, 
