--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/periodSetting/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/periodSetting/index.xhtml
@@ -4,7 +4,7 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-		<div class="tab2" style="margin-top: 7px;">
+		<div class="tab2" >
 			<table >
 		        <thead>
 		            <tr class="bg-green">
