--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
@@ -75,9 +75,9 @@
 						<div data-bind="with: selectedAlarmCheckCondition">
 							<div class="valign-center control-group">
 								<label class="flabel">#{i18n.getText('KAL003_11')}</label> 
-								<input tabindex="7" data-bind="ntsTextEditor: {value: code, required: true, constraint: 'AlarmCheckConditionCode', enable: $parent.screenMode() == 0, option: {width: '80px'}}" /> 
+								<input tabindex="7" id="A3_2" data-bind="ntsTextEditor: {value: code, required: true, constraint: 'AlarmCheckConditionCode', enable: $parent.screenMode() == 0, option: {width: '80px'}}" /> 
 								<label style="padding-left: 50px">#{i18n.getText('KAL003_12')}</label>
-								<input tabindex="8" data-bind="ntsTextEditor: {value: name, required: true, constraint: 'AlarmCheckConditionName'}" />
+								<input tabindex="8" id="A3_4" data-bind="ntsTextEditor: {value: name, required: true, constraint: 'AlarmCheckConditionName'}" />
 							</div>
 							<div class="valign-center control-group">
 								<label class="flabel">#{i18n.getText('KAL003_9')}</label> 
@@ -98,7 +98,7 @@
 								<button tabindex="10">#{i18n.getText('KAL003_14')}</button>
 							</div>
 						</div>
-						<div id="tab-panel"
+						<div id="tab-panel" tabindex="11"
 							data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}">
 							<div class="tab-content-1" data-bind="with: tabScopeCheck">
 								<div data-bind="with: targetCondition">
