update swap event

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/radiobox/radiobox.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/radiobox/radiobox.xhtml
@@ -33,7 +33,7 @@
 						<div data-bind="ntsRadioButton: {checked: selectedValue3, enable: enable, optionText: 'No Option' }"></div>
 						
 						<br/><span data-bind="text: ko.toJSON(selectedValue2())"></span>
-						<br/><span data-bind="text: ko.toJSON(selectedValue3())"></span></div>
+						<br/><span data-bind="text: ko.toJSON(selectedValue3())"></span>
 						<article class="cf">
 							<div class="tabs">
 								<ol>
