--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/swaplist/swaplist.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/swaplist/swaplist.xhtml
@@ -44,7 +44,15 @@
 								multipleDrag: { left: true, right: false },
 								innerDrag: { left: false, right: true },
 								outerDrag: { left: true, right: true },
-								itemsLimit: { left: 10000, right: 10 } 
+								itemsLimit: { left: 10000, right: 10 },
+								beforeMoveLeft: beforeLeft,
+								beforeMoveRight: beforeRight,
+								beforeAllLeft: beforeAllL,
+								beforeAllRight: beforeAllR,
+								afterMoveLeft: afterLeft,
+								afterMoveRight: afterRight,
+								afterAllLeft: afterAllL,
+								afterAllRight: afterAllR
 							}"></div>
 						</div>
 						<div id="up-down"
@@ -218,6 +226,46 @@ class ScreenModel {
 												<td>value</td>
 												<td><b>Type:</b> array&lt;any&gt;<br /> List selected value
 													from left grid and is showed in right grid.</td>
+											</tr>
+											<tr>
+												<td>beforeMoveLeft</td>
+												<td><b>Type:</b> function<br /> 
+													action before move to left. Return false if cancel move</td>
+											</tr>
+											<tr>
+												<td>beforeMoveRight</td>
+												<td><b>Type:</b> function<br /> 
+													action before move to right. Return false if cancel move</td>
+											</tr>
+											<tr>
+												<td>beforeAllLeft</td>
+												<td><b>Type:</b> function<br /> 
+													action before move all to left. Return false if cancel move</td>
+											</tr>
+											<tr>
+												<td>beforeAllRight</td>
+												<td><b>Type:</b> function<br /> 
+													action before move all to right. Return false if cancel move</td>
+											</tr>
+											<tr>
+												<td>afterMoveLeft</td>
+												<td><b>Type:</b> function<br /> 
+													action after move to left.</td>
+											</tr>
+											<tr>
+												<td>afterMoveRight</td>
+												<td><b>Type:</b> function<br /> 
+													action after move to right.</td>
+											</tr>
+											<tr>
+												<td>afterAllLeft</td>
+												<td><b>Type:</b> function<br /> 
+													action after move all to left.</td>
+											</tr>
+											<tr>
+												<td>afterAllRight</td>
+												<td><b>Type:</b> function<br /> 
+													action after move all to right.</td>
 											</tr>
 										</tbody>
 									</table>
