--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/fixedcheckcondition/fixedcheck.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/fixedcheckcondition/fixedcheck.xhtml
@@ -7,16 +7,20 @@
 	<com:ValidatorScript>
         nts.uk.ctx.at.record.dom.workrecord.erroralarm.primitivevalue.NameWKRecord
     </com:ValidatorScript>
-	
+	<style>
+		#table-fixed > table, th, td {
+		    border: 1px solid black;
+		}
+	</style>
 	<div>
-		<table id="table-fixed">
+		<table id="table-fixed" style="border: 1px solid #999999;">
 			<thead>
 			<tr class="bg-green">
 				<!-- I2_2 3 4 5 6 7 8 9 -->
 				<th style="width: 55px;text-align: center;"><div data-bind="ntsCheckBox: { checked: isAllfixedCheck  }"></div></th>
-				<th style="width: 100px;">#{i18n.getText('KAL003_24')}</th>
-				<th style="width: 155px; text-align: center;">#{i18n.getText('KAL003_54')}</th>
-				<th style="width: 200px;">#{i18n.getText('KAL003_55')}</th>
+				<th style="width: 60px;text-align: center;">#{i18n.getText('KAL003_24')}</th>
+				<th style="width: 175px;">#{i18n.getText('KAL003_54')}</th>
+				<th style="width: 220px;">#{i18n.getText('KAL003_55')}</th>
 				
 			</tr>
 		</thead>
@@ -26,9 +30,9 @@
 					<td style="text-align: center;">
 						<div data-bind="ntsCheckBox: { checked: useAtr }"></div>
 					</td>
-					<td><span data-bind="text: fixConWorkRecordNo"></span> </td>
+					<td style="text-align: center;"><span data-bind="text: fixConWorkRecordNo"></span> </td>
 					<td> <span data-bind="text: checkName"></span></td>
-					<td> <input data-bind="ntsTextEditor: {value: message}" /></td>
+					<td> <input style="width:107%;" data-bind="ntsTextEditor: {value: message}" /></td>
 				</tr>
 			</com:ko-foreach>
 		</tbody>
