--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -168,6 +168,33 @@
 				</div>
 			</div>
 		</div>
+		<div class="valign-center control-group">
+			<div class="table">
+				<div class="cell valign-top cm-column2">
+							<div class="lblTitle"></div>
+				</div>
+				<div tabindex="12" class="row-cell-margin right-content"
+						data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_3')}',
+										options:ko.observableArray([
+								                { goCode: 0, goName: '#{i18n.getText('KAF009_16')}' },
+								                { goCode: 1, goName: '#{i18n.getText('KAF009_17')}' }
+								                ]),
+										optionsValue: 'goCode',
+										optionsText: 'goName',
+										value: goSelected}">
+				</div>
+				<div tabindex="13" class="row-cell-margin right-content"
+						data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_4')}',
+										options:ko.observableArray([
+								                { backCode: 0,  backName: '#{i18n.getText('KAF009_18')}' },
+								                { backCode: 1,  backName: '#{i18n.getText('KAF009_19')}' }
+								                ]),
+										optionsValue: 'backCode',
+										optionsText: 'backName',
+										value: backSelected}">
+				</div>
+			</div>
+		</div>
 		<div class="cf valign-top control-group"
 			data-bind="if: displayCaculationTime() &amp; restTimeDisFlg()">
 			<!--A5_1 休憩時間ラベル--> 			
@@ -209,46 +236,6 @@
 			<!--A5_8 計算ボタン--> 			
 			<button data-bind="click: CaculationTime" tabindex="14" style="margin: 15px 0px 10px 290px;" class="caret-bottom">#{i18n.getText('KAF005_43')}</button>
 		</div>
-		<div class="cf valign-top control-group cell">
-			<!--A6_1 残業時間ラベル--> 	
-			<div class="cm-column" style="display: inline-block;">
-				<div class="lblTitle pull-left" data-bind="ntsFormLabel: {required: true}">#{i18n.getText('KAF005_50')}</div>
-			</div>	
-			<div class ="table-time">
-				<table id="fixed-overtime-hour-table">
-					<colgroup>
-						<col width="110px" />
-						<col width="110px" />
-						<col width="110px" />
-						<col width="110px" />
-					</colgroup>
-					<thead>
-						<tr>
-							<th class="ui-widget-header" rowspan="2"></th>
-							<!--A6_3 申請時間ラベル--> 					
-							<th class="ui-widget-header" rowspan="2">#{i18n.getText('KAF005_51')}</th>
-							<!--A6_4 事前申請ラベル--> 
-							<th class="ui-widget-header" rowspan="2">#{i18n.getText('KAF005_52')}</th>
-							<!--A6_6 実績時間ラベル--> 						
-							<th class="ui-widget-header" rowspan="2">#{i18n.getText('KAF005_54')}</th>
-						</tr>
-					</thead>
-					<tbody data-bind="foreach: overtimeHours">
-						<tr>
-							<!--A6_7 残業時間名称--> 						
-							<td class="header" data-bind="attr: { id: 'overtimeHoursHeader_'+attendanceID()+'_'+frameNo()}, text: frameName"></td>
-							<!--A6_8 残業申請時間入力--> 						
-							<td data-bind="attr: { id: 'overtimeHoursCheck_'+attendanceID()+'_'+frameNo()}, style: { 'background-color' : color }"><input tabindex="15" class="right-content"
-								data-bind="attr: { id: 'overtimeHoursCheck_'+attendanceID()+'_'+frameNo()}, style: { 'background-color' : color }, ntsTimeEditor: {name: nameID ,value: applicationTime, option: {width: '80px'}, inputFormat: 'time', mode: 'time',constraint:'OvertimeAppPrimitiveTime'}" /></td>
-							<!--A6_9 残業事前申請時間--> 						
-							<td class="right-content" data-bind="text: preAppTime"></td>
-							<!--A6_11 実績時間--> 						
-							<td class="right-content" data-bind="text: caculationTime"></td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
 		<div class="cf valign-top control-group" data-bind="if: displayBreakTimeFlg">
 			<!--A7_1 休出時間ラベル--> 		
 			<div class="cm-column" style="display: inline-block;">
@@ -280,6 +267,46 @@
 								data-bind="ntsTimeEditor: {name: '#[KAF005_76]',value: applicationTime, option: {width: '80px'}, inputFormat: 'time', mode: 'time',constraint:'OvertimeAppPrimitiveTime' }" /></td>
 							<!--A7_9 休出事前申請時間--> 						
 							<td class="right-content" data-bind="text: preAppTime"></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<div class="cf valign-top control-group cell">
+			<!--A6_1 残業時間ラベル--> 	
+			<div class="cm-column" style="display: inline-block;">
+				<div class="lblTitle pull-left" data-bind="ntsFormLabel: {required: false}">#{i18n.getText('KAF005_50')}</div>
+			</div>	
+			<div class ="table-time">
+				<table id="fixed-overtime-hour-table">
+					<colgroup>
+						<col width="110px" />
+						<col width="110px" />
+						<col width="110px" />
+						<col width="110px" />
+					</colgroup>
+					<thead>
+						<tr>
+							<th class="ui-widget-header" rowspan="2"></th>
+							<!--A6_3 申請時間ラベル--> 					
+							<th class="ui-widget-header" rowspan="2">#{i18n.getText('KAF005_51')}</th>
+							<!--A6_4 事前申請ラベル--> 
+							<th class="ui-widget-header" rowspan="2">#{i18n.getText('KAF005_52')}</th>
+							<!--A6_6 実績時間ラベル--> 						
+							<th class="ui-widget-header" rowspan="2">#{i18n.getText('KAF005_54')}</th>
+						</tr>
+					</thead>
+					<tbody data-bind="foreach: overtimeHours">
+						<tr>
+							<!--A6_7 残業時間名称--> 						
+							<td class="header" data-bind="attr: { id: 'overtimeHoursHeader_'+attendanceID()+'_'+frameNo()}, text: frameName"></td>
+							<!--A6_8 残業申請時間入力--> 						
+							<td data-bind="attr: { id: 'overtimeHoursCheck_'+attendanceID()+'_'+frameNo()}, style: { 'background-color' : color }"><input tabindex="15" class="right-content"
+								data-bind="attr: { id: 'overtimeHoursCheck_'+attendanceID()+'_'+frameNo()}, style: { 'background-color' : color }, ntsTimeEditor: {name: nameID ,value: applicationTime, option: {width: '80px'}, inputFormat: 'time', mode: 'time',constraint:'OvertimeAppPrimitiveTime'}" /></td>
+							<!--A6_9 残業事前申請時間--> 						
+							<td class="right-content" data-bind="text: preAppTime"></td>
+							<!--A6_11 実績時間--> 						
+							<td class="right-content" data-bind="text: caculationTime"></td>
 						</tr>
 					</tbody>
 				</table>
