--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/009/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/009/a/index.xhtml
@@ -25,7 +25,7 @@
 			<div id="functions-area">
 				<div class="container">
 					<button id="new" data-bind="click: createNew" tabindex="1">#{i18n.getText('CAS009_3')}</button>
-					<button id="registration" data-bind ="click: save" class="proceed" tabindex="2">#{i18n.getText('CAS009_4')}</button>
+					<button id="registration" data-bind ="click: save, enable : $root.errors.isEmpty" class="proceed" tabindex="2">#{i18n.getText('CAS009_4')}</button>
 					<button id="delete" data-bind ="click: remove, enable: component.currentCode()!='' &amp;&amp; $root.errors.isEmpty()" class="danger" tabindex="3">#{i18n.getText('CAS009_5')}</button>
 					<button id="reference" data-bind="enable: enableDetail, click: open_Dialog" tabindex="4">#{i18n.getText('CAS009_6')}</button>
 				</div>
