--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
@@ -287,9 +287,13 @@ table th, table td {
 }
 
 .ex-editor input {
-	width: 100%;
-	height: 100%;
+	width: 100% !important;
+	height: 100% !important;
 	display: block !important;
+	vertical-align: top;
+	font-size: 0.8em;
+	box-sizing: border-box;
+	line-height: 0px
 }
 
 .h-90 {
