--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/005/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/005/c/index.xhtml
@@ -15,8 +15,8 @@
 				<com:scriptfile path="/view/kcp/share/tree.js" of="/nts.uk.com.web" />
 				<com:scriptfile path="/view/ccg/share/ccg.service.js" of="/nts.uk.com.web" />
 				<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
-				<com:scriptfile path="ksm005.c.vm.js" />
 				<com:scriptfile path="ksm005.c.service.js" />
+				<com:scriptfile path="ksm005.c.vm.js" />
 				<com:scriptfile path="ksm005.c.start.js" />
 			</ui:define>
 			<ui:define name="content">
@@ -49,6 +49,7 @@
 							enable: isEnableListHist,
 							rows: 3,
 							columns: [
+								{ key: 'historyId', length: 5 },
 								{ key: 'textDisplay', length: 10 }
 							]}"></div>
 						<br />
@@ -67,7 +68,7 @@
 							enable: isEnableListMonthlyPattern,
 							columns: [
 								{ prop: 'code', length: 4 },
-								{ prop: 'name', length: 10 },
+								{ prop: 'name', length: 10 }
 							]}"></div>
 					</div>
 				</div>
