fix title history
Co-Authored-By: hopnt3si <hopnt3si@users.noreply.github.com>

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
@@ -185,7 +185,7 @@
 													primaryKey: 'optionValue',
 													columns: [
 														{ headerText: 'コード', key: 'optionValue', width: 100, hidden: true },
-							               				{ headerText: text('CPS001_65'), key: 'optionText', width: 232, hidden: false }
+							               				{ headerText: multiple.htitle(), key: 'optionText', width: 232, hidden: false }
 													]
 												},
 												event: {
