--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/kdw003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/kdw003.a.style.css
@@ -66,7 +66,7 @@
 	margin-left: -293px;
 	margin-top: 34px;
 	padding: 15px;
-	visibility: visible;
+	visibility: hidden;
 	top: -9999px;
 	left: -9999px;
 }
