[UI] [Hot_fix] fix combobox tab 4

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a4/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a4/index.xhtml
@@ -72,6 +72,7 @@
 						visibleItemsCount: 8,
 						value: stampRoundingGoWork,
 						optionsText: 'name',
+						dropDownAttachedToBody: true,
 						editable: false,
 						enable: true }"></div>
 			</div>	
@@ -96,6 +97,7 @@
 						visibleItemsCount: 8,
 						value: stampRoundingLeaveWork,
 						optionsText: 'name',
+						dropDownAttachedToBody: true,
 						editable: false,
 						enable: true }"></div>
 			</div>	
