bo sung categoryNameDefault

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/a/index.xhtml
@@ -64,7 +64,7 @@
 							<div id='col1' data-bind="ntsFormLabel: {}" class='distane'>
 								<label>#{i18n.getText('CPS006_8')}</label>
 							</div>
-							<span id="defaultName" data-bind="text: categoryNameDefault"></span>
+							<span id="defaultName" data-bind="text: categoryNameDefault()"></span>
 						</div>
 
 						<div>
