--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/style.css
@@ -56,25 +56,38 @@
 }
 .show-text-user-id{
 	width: 470px;
+	height: 80px;
 	padding-left: 28px;
 }
 
 .right-content {
 	margin-left: 20px;
 	float: left;
-	padding-top: 60px;
+	padding-top: 50px;
+}
+
+.show-text-user-id table{
+	height: 80px;
 }
 
 .right-content-space-personName1, .right-content-space-employee-code1, .right-content-space-login1{
-	width: 70px;
+	width: 100px;
 }
 
 .right-content-space-personName2, .right-content-space-employee-code2, .right-content-space-login2{
-	width: 20px;
+	width: 30px;
 } 
 
 .right-content-space-personName3, .right-content-space-employee-code3, .right-content-space-login3{
 	width: 200px;
+}
+
+.right-content-space-personName{
+	margin-bottom: 10px;
+}
+
+.right-content-space-login{
+	margin-bottom: 10px;
 }
 
 
