update fix ui style

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -3893,6 +3893,7 @@ button.nts-switch-button[disabled]:hover {
   background-color: MistyRose;
   border-radius: 5px;
   position: absolute;
+  z-index: 990;
 }
 /* line 14, ../sass/components/_functionpanel.scss */
 .ntsFunctionPanel .function-items .function-item-container {
