--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_functionpanel.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_functionpanel.scss
@@ -12,6 +12,7 @@
 		background-color: MistyRose;
 		border-radius: 5px;
 		position: absolute;
+		z-index: 990;
 		
 		.function-item-container {
 			line-height: 30px;
