--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/f/index.xhtml
@@ -40,7 +40,7 @@
 
 									<div style="width: 210px" id="searchCtg"
 										data-bind="ntsSearchBox: {searchMode: 'highlight',targetKey: 'id', comId: 'singleList', 
-	items: lstCategory, selected: currentPerInfoCtg, selectedKey: 'id', fields: ['categoryName'], mode: 'igGrid',placeHolder:'名称で検索…'}" />
+	items: lstCategory, selected: selectedCtgId , selectedKey: 'id', fields: ['categoryName'], mode: 'igGrid',placeHolder:'名称で検索…'}" />
 									<!-- <div>
 										<input type="text" placeholder="名称で検索…" data-bind="value: txtSearch" class="txtSearch"/>
 										<button type="button" class="caret-bottom caret-inline" data-bind="click: searchByName">検索</button>
