--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/b/index.xhtml
@@ -33,6 +33,7 @@
 						                { headerText: '#{i18n.getText('CAS014_32')}', key: 'name', width: 150, formatter: _.escape }
 						            ],
 									multiple: false,
+									rows:10,
 									value: selectedRoleSet
 								}"></table>
 					</div>
@@ -57,6 +58,7 @@
 					                { headerText: '#{i18n.getText('CAS014_37')}', key: 'displayDateRange', width: 220, formatter: _.escape }
 					            ],
 								multiple: false,
+								rows:10,
 								value: selectedEmployeeId
 							}">
 					</table>
