add id to layout list

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
@@ -112,6 +112,7 @@
 								<div data-bind="template: {	
 										name: 'list-data',
 										data: {
+											id: 'layout-data',
 											rows: 10,
 											value: id,
 											dataSource: gridlist,
